updated custom calc

--- a/custom-calculator.html
+++ b/custom-calculator.html
@@ -21,14 +21,14 @@
 
     <div id="pyramid-custom">
         <input type="number" placeholder="Length">
-        <input type="number" placeholder="Height" id="">
+        <input type="number" placeholder="Height">
         <button id="calculate-pyramid">Calculate Pyramid</button>
     </div>
 
     <div id="rectangular-prism">
         <input type="number" placeholder="Length">
-        <input type="number" placeholder="Height" id="">
-        <input type="number" placeholder="Width" id="">
+        <input type="number" placeholder="Height">
+        <input type="number" placeholder="Width">
         <button id="calculate-rectangular-prism">Calculate Rectangular Prism</button>
     </div>
 
