--- a/custom-calculator.html
+++ b/custom-calculator.html
@@ -37,6 +37,10 @@
         <button id="calculate-cube">Calculate Cube</button>
     </div>
 
+    <div id="calculate-pyramid-total">
+        
+    </div>
+
     <script>
         const pyramidInput = document.querySelector("#pyramid-custom")
         const rectPrismInput = document.querySelector("#rectangular-prism")
